Changes from jTDS 1.0.2
=======================

04/04/2005 - David Kilzer
 o Refactored duplicate code in JtdsPreparedStatement.setDate(int, Date, Calendar),
   setTime(int, Time, Calendar) and setTimestamp(int, Timestamp, Calendar) into
   adjustTimeByCalendar(long, Calendar) method in preparation to fix [1176221]
   JtdsPreparedStatement setTime setTimestamp Daylight DST Bug.

04/04/2005 - Alin Sinpalean
 o Optimized buffer allocation in RequestStream/ResponseStream.
 o Moved the Statement.getMoreResults(Statement.KEEP_CURRENT_RESULT) test to a
   different, JDBC 3.0 only unit test.

03/29/2005 - Alin Sinpalean
 o Applied a temporary (and highly useless) fix for bug [1172405] BLOB/CLOB
   position methods fail. position() methods work now, at least in theory.

03/26/2005 - Alin Sinpalean
 o Applied Mike's patch [1166594] JDBC3 Multiple open result sets. The
   getMoreResults(int) method is fully implemented and the JtdsResultSet class
   has been enhanced so that it can cache the remaining result set rows when
   required by the KEEP_CURRENT_RESULT option. Result sets returned by
   Statement.execute() are only cached by when required by the getMoreResults()
   method. A couple of minor bugs in the CachedResultSet class are also fixed;
   a where clause for updates could include text or image columns which is not
   allowed and the Sybase syntax for inserting rows containing all default
   values was incorrect.
 o Corrected bug [1170777] resultSet.updateRow() fails if no row has been
   changed. Thanks go to Brett Wooldridge for signalling the bug and providing
   a fix.

03/18/2005 - Alin Sinpalean
 o Implemented RFE [1165119] Computername in Connection-URL: added a WSID
   parameter to the URL properties, to override the host name that is
   determined automatically.
 o Corrected bug [1164219] possible incorrect synchronization in
   BlobImpl.java (removed all synchronizations from BlobImpl and ClobImpl).